feat: JAL templates/compiles